Example file in 2.83 manual crashes blender versions newer than 2.79 #75389

Closed
opened 2020-04-04 21:47:33 +02:00 by shannon zachow · 14 comments

System Information
Operating system: linux
Graphics card: GTX 1050

Blender Version
Broken: 2.81a, 2.82a, 2.83 (7c0e285948, 2020apr03)
Worked: 2.79b

Short description of error
Blender crashes with Segmentation Fault when trying to open file [Cloth-flag2.blend ]] referenced in [ https:*docs.blender.org/manual/en/dev/physics/cloth/examples.html | 2.83 manual page .

Exact steps for others to reproduce the error

  • Download the file.
  • Start blender with that file from cmd-line.

Segmentation fault.

**System Information** Operating system: linux Graphics card: GTX 1050 **Blender Version** Broken: 2.81a, 2.82a, 2.83 (7c0e28594840, 2020apr03) Worked: 2.79b **Short description of error** Blender crashes with Segmentation Fault when trying to open file [Cloth-flag2.blend ]] referenced in [[ https:*docs.blender.org/manual/en/dev/physics/cloth/examples.html | 2.83 manual page ](https:*wiki.blender.org/w/images/f/f9/Cloth-flag2.blend). **Exact steps for others to reproduce the error** - Download the file. - Start blender with that file from cmd-line. # Segmentation fault.
Author

Added subscriber: @shannonz-1

Added subscriber: @shannonz-1
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

It doesn't crash for me using 2.82a or 2.83.11.
The file was made using Blender version 2.45.17. There is an f-curve for the Empty that has no RNA Path. ObIpo.001 shows up under UNKNOWN in Orphan Data. The file should be updated I think so that this is no longer broken. I am not sure if this responsibility falls to the documentation team or the physics module.

The debug_output says:

read file C:\Users\Evan\Desktop\bugs\#75389 Manual file crash 2.8X\Cloth-flag2.blend

Version 245 sub 17 date unknown hash

INFO: Converting to Animato...
	converting ob Camera
	converting ob Cylinder
	converting ob Empty
act_to_adt - set adt action to act
ipo to animdata - ID:Empty, IPO:ObIpo.001, actname:<None> constname:<None> seqname:<None>  curves:1
ipo_to_animato
ERROR (bke.lib_id): C:\blender-git\blender\source\blender\blenkernel\intern\lib_id.c:322 id_us_min: ID user decrement error: IPObIpo.001 (from '[Main]'): 0 <= 0
	has anim
	converting ob Lamp
	converting ob Plane
	converting material Material
	converting material Material.001
	converting world World
	converting camera Camera
	converting light Spot
	converting action ObAction
	converting ipo ObIpo.001
INFO: Animato convert done
Proportional size (0.000000) under 0.00001, resetting to 1!
Saved session recovery to 'C:\Users\Evan\AppData\Local\Temp\quit.blend'
Freed 0 (Unconverted) Ipo-Curves from IPO 'ObIpo.001'```

[blender_debug_output.txt](https://archive.blender.org/developer/F8449354/blender_debug_output.txt)

---
**System Information**
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51

**Blender Version**
version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: `505a19ed75`
It doesn't crash for me using 2.82a or 2.83.11. The file was made using Blender version 2.45.17. There is an f-curve for the Empty that has no RNA Path. `ObIpo.001` shows up under `UNKNOWN` in Orphan Data. The file should be updated I think so that this is no longer broken. I am not sure if this responsibility falls to the documentation team or the physics module. The debug_output says: ```Read blend: C:\Users\Evan\Desktop\bugs\#75389 Manual file crash 2.8X\Cloth-flag2.blend read file C:\Users\Evan\Desktop\bugs\#75389 Manual file crash 2.8X\Cloth-flag2.blend ``` Version 245 sub 17 date unknown hash ``` INFO: Converting to Animato... converting ob Camera converting ob Cylinder converting ob Empty act_to_adt - set adt action to act ipo to animdata - ID:Empty, IPO:ObIpo.001, actname:<None> constname:<None> seqname:<None> curves:1 ipo_to_animato ERROR (bke.lib_id): C:\blender-git\blender\source\blender\blenkernel\intern\lib_id.c:322 id_us_min: ID user decrement error: IPObIpo.001 (from '[Main]'): 0 <= 0 has anim converting ob Lamp converting ob Plane converting material Material converting material Material.001 converting world World converting camera Camera converting light Spot converting action ObAction converting ipo ObIpo.001 INFO: Animato convert done Proportional size (0.000000) under 0.00001, resetting to 1! Saved session recovery to 'C:\Users\Evan\AppData\Local\Temp\quit.blend' Freed 0 (Unconverted) Ipo-Curves from IPO 'ObIpo.001'``` [blender_debug_output.txt](https://archive.blender.org/developer/F8449354/blender_debug_output.txt) --- **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 376.51 **Blender Version** version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: `505a19ed75`
Author

Log files created by

$ blenderVersion --debug --factory-startup Cloth-flag2.blend > log.Version.txt

where 'blenderVersion' is a path to a blender executable.

log.279.txt

log.281.txt

log.282.txt

log.283.txt

system-info.279.txt

system-info.281.txt

system-info.282.txt

system-info.283.txt

Log files created by ``` $ blenderVersion --debug --factory-startup Cloth-flag2.blend > log.Version.txt ``` where 'blenderVersion' is a path to a blender executable. [log.279.txt](https://archive.blender.org/developer/F8449636/log.279.txt) [log.281.txt](https://archive.blender.org/developer/F8449637/log.281.txt) [log.282.txt](https://archive.blender.org/developer/F8449638/log.282.txt) [log.283.txt](https://archive.blender.org/developer/F8449639/log.283.txt) [system-info.279.txt](https://archive.blender.org/developer/F8449640/system-info.279.txt) [system-info.281.txt](https://archive.blender.org/developer/F8449641/system-info.281.txt) [system-info.282.txt](https://archive.blender.org/developer/F8449642/system-info.282.txt) [system-info.283.txt](https://archive.blender.org/developer/F8449643/system-info.283.txt)

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I cannot reproduce this with either the latest stable or current development versions of Blender:

However, the message indicates that something is wrong.

ERROR (bke.lib_id): ...\source\blender\blenkernel\intern\lib_id.c:322 id_us_min: ID user decrement error: IPObIpo.001 (from '[Main]'): 0 <= 0

@mont29, do you know what may be happening?
(Probably the problem is in this old file. v2.45.17)

I cannot reproduce this with either the latest stable or current development versions of Blender: However, the message indicates that something is wrong. ``` ERROR (bke.lib_id): ...\source\blender\blenkernel\intern\lib_id.c:322 id_us_min: ID user decrement error: IPObIpo.001 (from '[Main]'): 0 <= 0 ``` @mont29, do you know what may be happening? (Probably the problem is in this old file. v2.45.17)

Added subscriber: @nokipaike

Added subscriber: @nokipaike

just to bring to your attention, activating the experimental new undo, blender with the old files crashes more or less immediately.

just to bring to your attention, activating the experimental new undo, blender with the old files crashes more or less immediately.
Bastien Montagne self-assigned this 2020-04-06 19:04:24 +02:00

The assert is not really meaningful here... usercount of deprecated old IPO is not expected to be really valid, will tweak that I think.

Loading such old files in general is not really expected to work well, but it should not crash either. will check further later.

The assert is not really meaningful here... usercount of deprecated old IPO is not expected to be really valid, will tweak that I think. Loading such old files in general is not really expected to work well, but it should not crash either. will check further later.

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Cannot reproduce any crash here either... Silenced the assert for that deprecated ID type, for the rest please reconfirm that it still crashes for you with latest master?

Cannot reproduce any crash here either... Silenced the assert for that deprecated ID type, for the rest please reconfirm that it still crashes for you with latest master?

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'

More than a week without feedback, considering the issue as solved for now.

More than a week without feedback, considering the issue as solved for now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75389
No description provided.