Silence assert on ID usercount for deprecated IPO.

We do not really care about those, so just avoid the noise when loading
very old files...

Re T75389.